--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -12,27 +12,13 @@
         </div>
         <table class="table_left_box_bottom">
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">新手使用指南：</td>
-                <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwczyh">成为注册用户</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhfbxx">如何发布信息</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhglxx">如何管理信息</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhczxx">如何查找信息</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxshgf">信息审核规范</span>
-                    @*<em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_mjrm">买家入门</span>*@
-                </td>
-            </tr>
-            <tr class="tr_left_box_bottom">
                 <td class="td_left_box_bottom_left">用户注册与登录：</td>
                 <td class="td_left_box_bottom_right">
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhzcyh">如何注册用户</span>
+                    <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yhmxg">用户名修改</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_wfdl">无法登录</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yhwfdl">用户无法登录</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhdshbd">账户丢失或被盗</span>
                     <em class="em_left_box_bottom_right"></em>
@@ -40,17 +26,27 @@
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">信息发布与删除：</td>
+                <td class="td_left_box_bottom_left">信息发布与管理：</td>
                 <td class="td_left_box_bottom_right">
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhfbxx">如何发布信息</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhglxx">如何管理信息</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhczxx">如何查找信息</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxgscxx">如何修改/删除信息 </span>
+                </td>
+            </tr>
+            <tr class="tr_left_box_bottom">
+                <td class="td_left_box_bottom_left">信息审核与管理：</td>
+                <td class="td_left_box_bottom_right">
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxshgf">信息审核规范</span>
+                    <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxzlbbxs">信息在列表不显示</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tsxxxshcf">提示信息相似或重复</span>
-                    @*<em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxwffb">信息无法发布</span>*@
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxbsc">信息被删除</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxgscxx">如何修改/删除信息 </span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
@@ -98,13 +94,13 @@
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">预约/评价/开店：</td>
+                <td class="td_left_box_bottom_left">用户评价与申诉：</td>
                 <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjbuy">预约评价买家使用指南</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjbuy">买家评价使用指南</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjsell">预约评价卖家使用指南</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjsell">卖家评价使用指南</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pjss">评价申诉</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pjss">用户申诉</span>
                 </td>
             </tr>
         </table>
