--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -14,15 +14,15 @@
             <tr class="tr_left_box_bottom">
                 <td class="td_left_box_bottom_left">用户注册与登录：</td>
                 <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhzcyh">如何注册用户</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhzczh">如何注册账户</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yhmxg">用户名修改</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhdlzh">如何登录账户</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yhwfdl">用户无法登录</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxgyhmhmm">如何修改用户名和密码</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhdshbd">账户丢失或被盗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhghbddsjh">如何更换绑定的手机号</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhzx">账户注销</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zhdshbdlzmb">账户丢失或被盗了怎么办</span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
@@ -30,23 +30,15 @@
                 <td class="td_left_box_bottom_right">
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhfbxx">如何发布信息</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhglxx">如何管理信息</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhcxyfbxx">查询已发布信息</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhczxx">如何查找信息</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxghscyfbxxx">修改或删除已发布信息</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhxgscxx">如何修改/删除信息 </span>
-                </td>
-            </tr>
-            <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">信息审核与管理：</td>
-                <td class="td_left_box_bottom_right">
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_fbxxstscfzmb">发布信息时提示重复怎么办</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxmfsxcs">信息免费刷新次数</span>
+                    <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxshgf">信息审核规范</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxzlbbxs">信息在列表不显示</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tsxxxshcf">提示信息相似或重复</span>
-                    <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxbsc">信息被删除</span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
