--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -18,48 +18,57 @@
     <div class="div_body">
         <div class="div_body_nav">
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="2"><span class="span_body_nav_inner">2、如何发布信息</span></span>
-                <span class="span_body_nav" id="3"><span class="span_body_nav_inner">3、如何管理信息</span></span>
+                <span class="span_body_nav" id="1"><span class="span_body_nav_inner">1、如何发布信息</span></span>
+                <span class="span_body_nav" id="2"><span class="span_body_nav_inner">2、如何查询已发布的信息</span></span>
+                <span class="span_body_nav" id="3"><span class="span_body_nav_inner">3、如何修改和已发布删除信息</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、如何查找信息</span></span>
-                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、信息审核规范</span></span>
-                @*<span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、买家入门</span></span>*@
+                <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、发布信息时提示重复怎么办</span></span>
+                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、信息免费刷新次数</span></span>
+                <span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、信息审核规范</span></span>
             </div>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_1">1.成为注册用户</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.如何发布信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">首先，点击首页或查询页面上方的“免费注册”，跳转到注册新用户的页面，按照提示填写好个人资料，阅读并同意服务条款后点击“同意服务条款并注册”，在注册资料填写正确的前提下，会提示您注册成功。您就成为信息小镇的用户了！ 注册成为用户后，可以直接进行身份认证，可以获得相应的积分和信用。 </td>
+                    <td colspan="2" class="td_content">点击首页右上角的免费发布信息按钮，进入类别选择页面，选择信息的类别，进入填写详细信息页面，按要求输入信息，点击发布。</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.如何发布信息</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.如何查询已发布的信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">在首页或查询页面右上角有个免费补发信息按钮，在登录信息小镇后，点击进入，即可选择类别，并免费发布信息。 </td>
+                    <td colspan="2" class="td_content">在首页右上角点击我的小镇，进入管理页面，查看信息管理,我的发布</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.如何管理信息</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.如何修改和已发布删除信息</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">登录信息小镇后，点击我的小镇，在我的信息中即可管理信息。 </td>
+                    <td colspan="2" class="td_content">在首页右上角点击我的小镇，进入管理页面，查看信息管理,我的发布，点击修改或删除按钮</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何查找信息</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.发布信息时提示重复怎么办</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">1.在上方的搜索栏输入关键字，点击搜索，对查找出的信息进行筛选； 2.根据首页已提供的分类进行查询</td>
+                    <td colspan="2" class="td_content"></td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.信息审核规范</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.信息免费刷新次数</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td colspan="2" class="td_content">每个用户每月拥有一次免费刷新次数</td>
+                </tr>
+            </table>
+        </div>
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.信息审核规范</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
@@ -324,7 +333,7 @@
                         1. 不得发布虚假的房源图片（与内部图片或本套房源不一致的房源图，装修情况不一致），否则将做房源下架处理。<br />
                         2. "不得在图片上加盖任何竞品水印（包括但不仅限于其他网站logo，网址，100%、真房源、佣金等广告字样），否则将做房源下架处理。<br />
                         3. 对于非竞品中介公司名称和logo，要求白色、透明、所占图片面积小于25%三个条件必须同时满足，否则将做房源下架处理。<br />
-                        4. 对于非竞品中介公司名称+宣传语——房源下架处理。<br />                                                
+                        4. 对于非竞品中介公司名称+宣传语——房源下架处理。<br />
                         5. 不得发布模糊、失真的房源图片（遮挡、拼接、马赛克、翻转等），否则将做房源下架处理。<br />
                         6. 不得在房源描述中插入图片（包括网站logo，头像等），否则将做房源下架处理<br />
                         7. 上传的室内图大小限制在100K-10M之间，图片长或宽皆不得小于720px，否则将无法上传。<br />
@@ -546,9 +555,9 @@
             </table>
         </div>
         @*<div class="div_body_nav_title" id="div_body_nav_title_6">6.买家入门</div>
-        <div class="div_body_nav_text">
+            <div class="div_body_nav_text">
 
-        </div>*@
+            </div>*@
     </div>
     <div class="div_bottom">
         <div class="div_bottom_inner">
@@ -566,6 +575,6 @@
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
     </div>
-    <div class="div_rtop" id="div_rtop" onClick="GoToTop()"></div>
+    <div class="div_rtop" id="div_rtop" onclick="GoToTop()"></div>
 </body>
 </html>
