--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
@@ -18,55 +18,53 @@
     <div class="div_body">
         <div class="div_body_nav">
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="1"><span class="span_body_nav_inner">1、如何注册用户</span></span>
-                <span class="span_body_nav" id="2"><span class="span_body_nav_inner">2、用户名修改</span></span>
-                <span class="span_body_nav" id="3"><span class="span_body_nav_inner">3、用户无法登录</span></span>
+                <span class="span_body_nav" id="1"><span class="span_body_nav_inner">1、如何注册账户</span></span>
+                <span class="span_body_nav" id="2"><span class="span_body_nav_inner">2、如何登录账户</span></span>
+                <span class="span_body_nav" id="3"><span class="span_body_nav_inner">3、如何修改用户名和密码</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、账户丢失或被盗</span></span>
-                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、账户注销</span></span>
+                <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、如何更换绑定的手机号</span></span>
+                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、账户丢失或被盗了怎么办</span></span>
             </div>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_1">1.如何注册用户</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_1">1.如何注册账户</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">用户注册后是不可以修改用户名的，用户名是您在信息小镇上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。信息小镇网推荐您使用中文的用户名。 </td>
+                    <td colspan="2" class="td_content">点击信息小镇首页上方的免费注册按钮，填写资料并认证阅读 "信息小镇用户使用协议" 后,勾选本人已仔细阅读并同意，点击注册,便可注册成为信息小镇用户</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.用户名修改</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.如何登录账户</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">用户注册后是不可以修改用户名的，用户名是您在信息小镇上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。信息小镇网推荐您使用中文的用户名。 </td>
+                    <td colspan="2" class="td_content">点击首页右上方的“您好，请登录”,跳转到登录页面，输入用户名、密码，点击登录</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.用户无法登录</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.如何修改用户名和密码</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
                     <td colspan="2" class="td_content">
-                        用户不能登录网站的原因有以下几种可能：<br/>
-                        1、登录时输入的"用户名或邮件"、"密码"有错误，这种情况请检查用户名和密码，也可以“找回密码”，重试登录<br/>
-                        2、信用值为“<span class="span_red">0</span>”时，不允许登录网站。在信息小镇进行了非法操作，一旦查实，信用值即被降为0。<br/>
-                        （1）分类信息被删除，信用<span class="span_red">-1</span><br/>
-                        （2）举报被确认为非法，信用<span class="span_red">-1</span><br/>
-                        （3）评论被删除，信用<span class="span_red">-1</span><br/>
+                        1、用户注册后是不可以修改用户名的，用户名是您在信息小镇上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。信息小镇网推荐您使用中文的用户名。<br />
+                        2、按以下操作即可修改密码：<br/>
+                        （1）进入我的小镇，账户管理，密码修改<br/>
+                        （2）输入旧密码以及新密码,点击确认<br/>
                     </td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.账户丢失或被盗</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何更换绑定的手机号</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">用户注册后是不可以修改用户名的，用户名是您在信息小镇上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。信息小镇网推荐您使用中文的用户名。 </td>
+                    <td colspan="2" class="td_content">进入我的小镇，账户管理，换绑手机，输入新的手机号，和验证码，点击换绑</td>
                 </tr>
             </table>
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.账户注销</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.账户丢失或被盗了怎么办</div>
         <div class="div_body_nav_text">
             <table>
                 <tr>
