--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -251,7 +251,7 @@
                         <span class="span_wtjj_inner" id="span_wtjj_inner_qxsmrz">3、取消实名认证</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_qxyyzzrz">4、取消/更换营业执照认证</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_wfjssjdx">5、无法接收手机短信，怎么更换手机认证</span>
-                        <span class="span_wtjj_inner" id="span_wtjj_inner_xyxggsm">6、想要修改公司名？</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_xyxggsm">6、想要修改公司名?</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_yyzzrztbg">7、营业执照认证通不过</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_rhtjyyzzrz">8、如何提交营业执照认证</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_qxgrsfrz">9、取消个人身份认证</span>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="div_wtjj_inner" id="div_hzzx" style="display:none">
                     <div style="display:block;height:85px;">
-                        <span class="span_wtjj_inner" id="span_wtjj_inner_sfzs">1、信息小镇网上的招聘、房产、二手、商务等公司是否真实？</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_sfzs">1、信息小镇网上的招聘、房产、二手、商务等公司是否真实?</span>
                     </div>
                     <div class="div_qtxxmy_inner div_wtjj_inner_sfzs" id="div_wtjj_inner_sfzs" style="display:none;">
                         根据您的问题，我们建议您：
