--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YYPJKD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YYPJKD.cshtml
@@ -78,7 +78,7 @@
                 <table>
                     <tr>
                         <td class="td_content">
-                            &nbsp;&nbsp;&nbsp;&nbsp;1、怕被骗？怕临时加价？免费预约让您高枕无忧！预约前与商家沟通好服务时间、服务价格和服务细节，如果您在预约后被骗/被临时加价<br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;1、怕被骗?怕临时加价?免费预约让您高枕无忧！预约前与商家沟通好服务时间、服务价格和服务细节，如果您在预约后被骗/被临时加价<br />
                             不要着急，在线申请赔付，等待赔付中心受理，申请成功后，我们全额赔付您的损失！<br />
                             &nbsp;&nbsp;&nbsp;&nbsp;2、预约之后您可以对您接收的服务进行评价，没有预约我们不会开放评价入口的<br />
                         </td>
