--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
@@ -24,8 +24,6 @@
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、信用为什么会减少 ?</span></span>
-                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、我每天可以发布多少条信息？</span></span>
-                <span class="span_body_nav" id="6"><span class="span_body_nav_inner">6、同一条信息每天我可以更新几次 ?</span></span> 
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.什么是信用 ?</div>
@@ -387,9 +385,9 @@
             <table class="table_inner">
                 <thead>
                     <tr>
-                        <th>您的等级 </th>
-                        <th>信用值 </th>
-                        <th>更新次数 </th>
+                        <th style="text-align: center;">您的等级 </th>
+                        <th style="text-align: center;">信用值 </th>
+                        <th style="text-align: center;">更新次数 </th>
                     </tr>
                 </thead>
                 <tbody>
