--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -42,17 +42,17 @@
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">认证与取消认证：</td>
+                <td class="td_left_box_bottom_left">认证相关的问题：</td>
                 <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rzzx">认证中心</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhjxrz">如何进行认证</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhrz">如何认证</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yyzzrzxz">营业执照认证须知</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_ghrz">更换认证</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yyzzrzynxhc">营业执照认证有哪些好处</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_sbdrzm">收不到认证码</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_grsfrzxz">个人身份认证须知</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_sbdrzyj">收不到认证邮件</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_grsfrzynxhc">个人身份认证有哪些好处</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_gdrzwt">更多认证问题</span>
                 </td>
@@ -62,37 +62,39 @@
                 <td class="td_left_box_bottom_right">
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_smsxy">什么是信用</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xydzjyjs">信用的增加与减少</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xysrhxsd">信用是如何显示的</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_djyftl">等级与发帖量</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhzjxy">如何增加信用</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_tytxxgxcs">同一条信息更新次数</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xywsmhjs">信用为什么会减少</span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">网络防骗常识：</td>
+                <td class="td_left_box_bottom_left">防骗提示与案例：</td>
                 <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pcfp">拼车防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_qzfpts">求职防骗提示</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_wlzpfp">网络招聘防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_zffpts">租房防骗提示</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwfp">宠物防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pcfpts">拼车防骗提示</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_esjyfp">二手交易防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwfpts">宠物防骗提示</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_fcfp">房产防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_esjyfpts">二手交易防骗提示</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_hcpfp">火车票防骗</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_kssbxjxx">快速识别虚假信息</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_gdfpts">更多防骗提示</span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
-                <td class="td_left_box_bottom_left">用户评价与申诉：</td>
+                <td class="td_left_box_bottom_left">如何举报与申诉：</td>
                 <td class="td_left_box_bottom_right">
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjbuy">买家评价使用指南</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxxzjbslyczbf">信息小镇举报受理与处置办法</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjsell">卖家评价使用指南</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhjbxx">如何举报信息</span>
                     <em class="em_left_box_bottom_right"></em>
-                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pjss">用户申诉</span>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xxbscrhss">信息被删除如何申诉</span>
                 </td>
             </tr>
         </table>
