--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -215,7 +215,7 @@
                 <tr>
                     <td class="td_content" colspan="2">
                         真实案例：<br />
-                        今年6月6日下午,一名姓张的男子出站后，他使用附近的一个公用电话和表哥通完话后，男子挂掉电话准备离开，此时，公用电话再次响起。会不会是表哥遗漏了什么重要事情？男子接起电话，只听对方说道：“你是张某吗？我叫王勇，是你表哥的朋友，他临时有事不能来 接你了，我在XX宾馆等你，张某有些怀疑，但想到对方所说也没什么问题，赶到了XX宾馆，几句寒暄后，王勇以要去进货差几千块钱向张某借钱。钱到手后，王勇再次将张某送到宾馆门口并告诉张某，自己先去进货，进完货就来找张某，让他不要离开。可张某没料到，王勇这一走就再也没回来。下午3点，张某预感事情不妙，前往站前分局报案。<br />
+                        今年6月6日下午,一名姓张的男子出站后，他使用附近的一个公用电话和表哥通完话后，男子挂掉电话准备离开，此时，公用电话再次响起。会不会是表哥遗漏了什么重要事情?男子接起电话，只听对方说道：“你是张某吗?我叫王勇，是你表哥的朋友，他临时有事不能来 接你了，我在XX宾馆等你，张某有些怀疑，但想到对方所说也没什么问题，赶到了XX宾馆，几句寒暄后，王勇以要去进货差几千块钱向张某借钱。钱到手后，王勇再次将张某送到宾馆门口并告诉张某，自己先去进货，进完货就来找张某，让他不要离开。可张某没料到，王勇这一走就再也没回来。下午3点，张某预感事情不妙，前往站前分局报案。<br />
                     </td>
                 </tr>
             </table>
@@ -281,7 +281,7 @@
                 </tr>
                 <tr>
                     <td class="td_content" colspan="2">
-                        &nbsp;&nbsp;&nbsp;&nbsp;若用人单位招聘面试在很偏远的地方，即使在白天，也要注意警惕，若出了事，连报警的地方和机会都很难找，你还愿意去吗？在接到面试通知的时候，一定要问清楚公司的具体地址，先在网上查询具体的位置，也可以顺便查查公司的详细情况。
+                        &nbsp;&nbsp;&nbsp;&nbsp;若用人单位招聘面试在很偏远的地方，即使在白天，也要注意警惕，若出了事，连报警的地方和机会都很难找，你还愿意去吗?在接到面试通知的时候，一定要问清楚公司的具体地址，先在网上查询具体的位置，也可以顺便查查公司的详细情况。
                     </td>
                 </tr>
                 <tr>
@@ -802,7 +802,7 @@
                 </tr>
                 <tr>
                     <td class="td_content" colspan="2">
-                        &nbsp;&nbsp;&nbsp;&nbsp;既然购买水货有这么多危害，那么为什么它们还存在一定的市场呢？这其中主要有以下几个原因：<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;既然购买水货有这么多危害，那么为什么它们还存在一定的市场呢?这其中主要有以下几个原因：<br />
                         <span class="span_green">难以辨别</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;现在的水货产品的制作工艺安全可以到以假乱真，加上有些水货本身就是原厂货，只是应销售的地点改变而成了水货，这种水货更是难以辨别。另一方面，消费者的辨别能力有限，具备专业辨别水平的人更是瘳瘳无几。这就使得一些利欲熏心的奸商拿着水货当行货欺骗消费者。<br />
                         <span class="span_green">价格低廉</span><br />
@@ -858,7 +858,7 @@
                         <span class="span_green">4、看房屋介绍</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;描述简单，内容泛泛的多为经纪人，房东的的信息一般会写的比较详细，具体的行车路线，房源的突出特点等。<br />
                         <span class="span_green">5、看价格</span><br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;价格过低可能为虚假房源，有些经纪人发布一些地段好，价格便宜的房源吸引人，当有人表示对此房有意向时，却开始推荐其他房源；另外，也有些黑中介发布低价格的房源吸引客户，收取看房费。如何识别黑中介？<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;价格过低可能为虚假房源，有些经纪人发布一些地段好，价格便宜的房源吸引人，当有人表示对此房有意向时，却开始推荐其他房源；另外，也有些黑中介发布低价格的房源吸引客户，收取看房费。如何识别黑中介?<br />
                         <span class="span_green">6、看付款方式</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;同意月付或押一付一，基本上都是房东。<br />
                         <span class="span_green">7、打电话询问</span><br />
