--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
@@ -50,9 +50,9 @@
                         <table class="table_inner">
                             <thead>
                                 <tr>
-                                    <th>信用级别</th>
-                                    <th>图标</th>
-                                    <th>信用值</th>
+                                    <th style="text-align: center;">信用级别</th>
+                                    <th style="text-align: center;">图标</th>
+                                    <th style="text-align: center;">信用值</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -155,8 +155,8 @@
                         <table class="table_inner">
                             <thead>
                                 <tr>
-                                    <th>增加方式</th>
-                                    <th>增加点数</th>
+                                    <th style="text-align: center;">增加方式</th>
+                                    <th style="text-align: center;">增加点数</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -211,8 +211,8 @@
                         <table class="table_inner">
                             <thead>
                                 <tr>
-                                    <th>减少原因</th>
-                                    <th>减少点数</th>
+                                    <th style="text-align: center;">减少原因</th>
+                                    <th style="text-align: center;">减少点数</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -233,202 +233,6 @@
                     </td>
                 </tr>
             </table>
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.我每天可以发布多少条信息 ?</div>
-        <div class="div_body_nav_text">
-            <table class="table_inner">
-                <thead>
-                    <tr>
-                        <th rowspan="2">类目 </th>
-                        <th rowspan="2">类别 </th>
-                        <th colspan="2">个人免费发帖数 </th>
-                    </tr>
-                    <tr>
-                        <th>每天</th>
-                        <th>每月</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td rowspan="7">房产</td>
-                        <td>整租</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>合租</td>
-                        <td>4</td>
-                        <td>6</td>
-                    </tr>
-                    <tr>
-                        <td>短租</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>商铺</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>厂房</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>写字楼</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>二手房</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="3">宠物</td>
-                        <td>宠物狗、宠物猫、花鸟鱼虫</td>
-                        <td>2</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>宠物用品/食品、宠物店/服务</td>
-                        <td>3</td>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>宠物赠送/领养</td>
-                        <td>1</td>
-                        <td>30</td>
-                    </tr>
-                    <tr>
-                        <td rowspan="11">二手</td>
-                        <td>办公用品/设备、家居/日用品</td>
-                        <td>8</td>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>成人用品、二手求购、5元以下物品、免费赠送、创意服务交易、其他</td>
-                        <td>6</td>
-                        <td>9</td>
-                    </tr>
-                    <tr>
-                        <td>二手设备、网游/虚拟物品、图书/音像/软件</td>
-                        <td>8</td>
-                        <td>10</td>
-                    </tr>
-                    <tr>
-                        <td>通讯业务</td>
-                        <td>3</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>艺术品/收藏品、票务卡券、文体/户外/乐器、美容/保健、文体/户外/乐器</td>
-                        <td>5</td>
-                        <td>9</td>
-                    </tr>
-                    <tr>
-                        <td>平板电脑、笔记本电脑、二手手机、台式机/配件、数码产品</td>
-                        <td>3</td>
-                        <td>7</td>
-                    </tr>
-                    <tr>
-                        <td>物品交换</td>
-                        <td>6</td>
-                        <td>9</td>
-                    </tr>
-                    <tr>
-                        <td>手家具、二手家电</td>
-                        <td>10</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>电动车/自行车、二手摩托车</td>
-                        <td>3</td>
-                        <td>7</td>
-                    </tr>
-                    <tr>
-                        <td>母婴/儿童用品</td>
-                        <td>10</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>服装/鞋帽/箱包</td>
-                        <td>8</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>二手汽车</td>
-                        <td>所有二级类</td>
-                        <td colspan="2">个人每日2条月2条/商家每日3条月5条。<br />为了维护信息小镇良好的交易环境，提高网站的信息质量，当您的行为有异常时发帖需要付费1分钱（不可退）。</td>
-                    </tr>
-                    <tr>
-                        <td>全职招聘</td>
-                        <td>所有二级类</td>
-                        <td colspan="2">免费用户在未进行信息小镇实名认证、芝麻认证、营业执照认证或银行对公认证（以上任意一种）的情况下，首次发帖展现需支付1元，否则无法展现。 完成任意一种认证后，免费发布上限为10条。完成支付或芝麻认证、信息小镇实名认证后，可展现2条；完成营业执照认证，可展现3条；完成银行对公帐号认证后，可展现4条。<br />为了维护信息小镇良好的交易环境，提高网站的信息质量，当您的行为有异常时发帖需要付费18元（不可退）。</td>
-                    </tr>
-                    <tr>
-                        <td>兼职招聘</td>
-                        <td>所有二级类</td>
-                        <td colspan="2">北京，上海，广州，深圳，成都5个城市免费发帖条数为1条，超出后收费10元/条；整体发帖上限为10条和30条（认证营业执照后），超出后收费5元/条。<br />为了维护信息小镇良好的交易环境，提高网站的信息质量，当您的行为有异常时发帖需要付费18元（不可退）。</td>
-                    </tr>
-                    <tr>
-                        <td>本地服务</td>
-                        <td>所有二级类</td>
-                        <td colspan="2">每个二级类发帖上限每日一条，每月30条（特殊情况详见发布页面）</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_6">6.同一条信息每天我可以更新几次 ?</div>
-        <div class="div_body_nav_text">
-            <table class="table_inner">
-                <thead>
-                    <tr>
-                        <th style="text-align: center;">您的等级 </th>
-                        <th style="text-align: center;">信用值 </th>
-                        <th style="text-align: center;">更新次数 </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>等级一</td>
-                        <td>1-10</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>等级二</td>
-                        <td>11-65</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>等级三</td>
-                        <td>66-165</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td>等级四</td>
-                        <td>166-320</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>等级五</td>
-                        <td>321-500</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>等级六</td>
-                        <td>501-1000</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>等级七</td>
-                        <td>1001以上</td>
-                        <td>3</td>
-                    </tr>
-                </tbody>
-            </table>
-            <span class="span_red">备注：信用值为0的账户不允许更新。</span>
         </div>
     </div>
     <div class="div_bottom">
