--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_RZSM.cshtml
@@ -32,7 +32,7 @@
             2、为了保证信息的真实性，资料验证是信息小镇提供的一系列身份识别服务，资料验证可核实邮箱、手机号码、身份证、营业执照信息。而验证这些信息后可提升信用值。<br />
             3、邮箱、手机号码、身份证这些个人信息，信息小镇绝不会主动的对外公开。 <br />
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_2">2.我在哪里提交资料进行认证?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_2">2.商家营业执照认证须知</div>
         <div class="div_body_nav_text">
             1、首先您需要在信息小镇注册一个账户。<a class="cursor">立即注册</a> <br />
             2、登陆后进入个人中心--我的账户的“认证管理”即可进行资料认证。<a class="cursor">进入认证管理</a> <br />
@@ -45,70 +45,34 @@
             <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过实名（身份证）验证后获得</span><span class="span_body_nav_img span_body_nav_img_smrz"></span><br />
             <span class="span_body_nav_text">&nbsp;&nbsp;&nbsp;通过营业执照验证后获得</span><span class="span_body_nav_img span_body_nav_img_yyzzrz"></span><br />
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_3">3.一项资料可以在多少个账户里进行认证?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_3">3.商家进行营业执照认证有哪些好处?</div>
         <div class="div_body_nav_text">
             1、 一个邮箱、手机、身份认证只能在一个账户里认证。<br />
             2、 一个营业执照可以在多个账户里验证。 <br />
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_4">4.如何取消认证?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_4">4.为什么我申请的营业执照认证没有通过审核?</div>
         <div class="div_body_nav_text">
             1、邮箱、手机认证通过后不可以取消，但可以更改。 登陆后进入个人中心--我的账户的“认证管理”即可进行邮箱、手机认证修改。<a class="cursor">进入认证管理</a><br />
             2、实名（身份证）、执照认证后不可以取消。<br />
             3、个人身份认证后不可以取消。 <br />
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_5">5.为什么我提交验证申请的时候，系统提示我已被xx账户验证过了?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.个人身份认证须知</div>
         <div class="div_body_nav_text">
             遇到这个提示说明您提供的资料已经在xx账户里验证了。您可以登录信息小镇帐号：xx查看，同时建议您能使用之前的账户进行登录，如果忘记密码请点击这里取回。
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_6">6.收不到认证邮件?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.个人身份证包含哪几种认证方式?</div>
         <div class="div_body_nav_text">
             建议您在垃圾邮件中查找一下，如果还是查询不到邮箱确认邮件，请提供您账号的相关信息与信息小镇客服联系，以便我们帮您查询并测试验证。
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_7">7.如何更换邮箱、手机的认证?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_7">7.进行个人身份认证有哪些好处?</div>
         <div class="div_body_nav_text">
             登陆后进入我的账户-->账号绑定即可进行邮箱、手机验证修改。进入账号绑定
         </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_8">8.收不到验证码?</div>
+        <div class="div_body_nav_title" id="div_body_nav_title_8">8.为什么我申请的个人身份认证没有通过审核?</div>
         <div class="div_body_nav_text">
             1、建议您不要重复点击发送验证码，您可以等待一会儿，看是否有验证码短信延迟发送到您的手机上。 因为当申请验证的用户较多时，可能导致系统发送验证码时间延迟，重复点击发送验证码可能会导致之后接到多个验证码， 输入时而因与提交的时间不匹配导致提示验证码错误。<br />
             2、建议您使用短信验证时填写的手机或座机号拨打信息小镇专用电话：13655858。接通后，按 号码键：5  进入语音验证码获取通道。<br />
             3、若经过以上两种方法您仍然无法获取验证码，建议您将您的需要验证的信息（手机号码/身份证图片/营业执照图片）、账号的用户名和密码提供给信息小镇客服，以便于我们帮您测试验证。<br />
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_9">9.商家认证营业执照的证件要求</div>
-        <div class="div_body_nav_text">
-            <span class="span_body_nav_text_title">一、商家认证营业执照的要求</span>
-            1、可以提交的证件（执照原件/复印件，正本或副本）均可。<br />
-            2、证件需在有效期以内。<br />
-            <span class="span_body_nav_text_title">二、营业执照不符合审核规定的原因有以下6种</span>
-            1、证件无效、虚假 (发现将冻结账户)<br />
-            2、证件不完整或不清晰<br />
-            3、非国家认可的机构<br />
-            4、有效期不足三个月<br />
-            5、无工商局的章<br />
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_10">10.什么是个人身份认证?</div>
-        <div class="div_body_nav_text">
-            1、个人身份认证是一种用来证实用户真实个人身份的认证。
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_11">11.个人身份证包含哪几种认证方式?</div>
-        <div class="div_body_nav_text">
-            1、微博认证。<br />
-            2、企业邮箱认证。<br />
-            3、上传在职证明。<br />
-            4、校园实名认证。<br />
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_12">12.进行个人身份认证有哪些好处?</div>
-        <div class="div_body_nav_text">
-            1、可以用来自助恢复被误判成中介/商家的信息。<br />
-            2、通过认证后在各个类别发帖都为个人身份。<br />
-            3、在部分类别可以获得更好的流量。<br />
-        </div>
-        <div class="div_body_nav_title" id="div_body_nav_title_13">13.为什么我申请的个人身份认证没有通过审核?</div>
-        <div class="div_body_nav_text">
-            1、如用户提供的资料可以证实用户为：房产经纪人、保险行业、职介、二手商家、黄页商家。那么申请不会通过。<br />
-            2、已验证过营业执照的账户无法通过个人身份认证。<br />
-            3、微博认证只支持橙V认证，公司/企业/机构的蓝V无法通过个人身份认证。<br />
-            4、如证实用户确有在某一个类别存在大量发帖的经营行为，那么申请将无法通过。<br />
         </div>
     </div>
     <div class="div_bottom">
