--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -8,11 +8,11 @@
 
 .span_step_text {font-size: 16px;font-weight: 700;height: 30px;vertical-align: top;margin-top: 2px;margin-left: 10px;display: inline-block;}
 
-.span_step_first {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/one-blue.png);}
+.span_step_first {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/one-purple.png);}
 
-.span_step_second {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/two-blue.png);}
+.span_step_second {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/two-purple.png);}
 
-.span_step_third {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/three-blue.png);}
+.span_step_third {width: 30px;height: 30px;margin-left: 18px;display: inline-block;background-image: url(../images/three-purple.png);}
 
 .div_wtlx {width: 770px;height: 100%;display: block;margin-left: 60px;background-color: #fff;border: 1px solid #DEDEDE;border-radius: 4px;}
 
