--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -18,7 +18,7 @@
     <div class="div_body">
         <div class="div_body_nav">
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="1"><span class="span_body_nav_inner_first">1、拼车防骗指南</span></span>
+                <span class="span_body_nav" id="1"><span class="span_body_nav_inner_first">1、拼车防骗提示</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="1_1"><span class="span_body_nav_inner childnode">1_1.拼车注意事项</span></span>
@@ -26,7 +26,7 @@
                 <span class="span_body_nav" id="1_3"><span class="span_body_nav_inner childnode">1_3.拼车被骗实例</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="2"><span class="span_body_nav_inner_first">2、网络招聘防骗指南</span></span>
+                <span class="span_body_nav" id="2"><span class="span_body_nav_inner_first">2、求职防骗提示</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="2_1"><span class="span_body_nav_inner childnode">2_1.全职篇</span></span>
@@ -34,7 +34,7 @@
                 <span class="span_body_nav" id="2_3"><span class="span_body_nav_inner childnode">2_3.了解职介</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="3"><span class="span_body_nav_inner_first">3、宠物交易防骗指南</span></span>
+                <span class="span_body_nav" id="3"><span class="span_body_nav_inner_first">3、宠物防骗提示</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="3_1"><span class="span_body_nav_inner childnode">3_1.宠物狗防骗手册</span></span>
@@ -53,7 +53,7 @@
                 <span class="span_body_nav" id="4_6"><span class="span_body_nav_inner childnode">4_6.数码相机知识防骗科谱</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="5"><span class="span_body_nav_inner_first">5、房产防骗指南</span></span>
+                <span class="span_body_nav" id="5"><span class="span_body_nav_inner_first">5、租房防骗提示</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="5_1"><span class="span_body_nav_inner childnode">5_1.如何识别中介冒充个人</span></span>
@@ -69,7 +69,7 @@
                 <span class="span_body_nav" id="5_7"><span class="span_body_nav_inner childnode">5_7.二手房买卖流程</span></span>
             </div>
             <div class="div_body_nav_inner">
-                <span class="span_body_nav" id="6"><span class="span_body_nav_inner_first">6、火车票防骗指南</span></span>
+                <span class="span_body_nav" id="6"><span class="span_body_nav_inner_first">6、快速识别虚假信息</span></span>
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="6_1"><span class="span_body_nav_inner childnode">6_1.常见火车票骗子骗人手法  </span></span>
