--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/BZZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/BZZX.cshtml
@@ -9,6 +9,7 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Public_TP.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/BZZX_Common.js")></script>
     @RenderSection("Section_Head", false)
 }
