--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -64,15 +64,13 @@
 
 .divImg {width: 130px;height: 100px;display: inline-block;margin-right: 10px;border-radius: 4px;overflow: hidden;cursor: move;}
 
-.div_toolbar_wrap {width: 130px;height: 100px;cursor: move;display: none;top: 0;left: 0;}
-
-.div_toolbar_wrap:hover {display: block;width: 130px;height: 100px;position: absolute;cursor: move;}
+.div_toolbar_wrap {width: 130px;height: 100px;cursor: move;display: none;top: -100px;left: 0;position: relative;}
 
 .opacity {position: absolute;left: 0;right: 0;bottom: 0;width: 100%;height: 20px;background-color: #000;opacity: 0.3;z-index: 900;}
 
 .toolbar {position: absolute;left: 0;right: 0;bottom: 0;width: 100%;height: 20px;z-index: 901;cursor: default;}
 
-.edit {background-image: url(../images/edit.png);width: 20px;height: 20px;position: absolute;text-decoration: none;right: 22px;top: 0;cursor: pointer;}
+.edit {display: none; background-image: url(../images/edit.png);width: 20px;height: 20px;position: absolute;text-decoration: none;right: 22px;top: 0;cursor: pointer;}
 
 .edit:active {background-image: url(../images/edit_select.png);}
 
