--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -73,7 +73,7 @@
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left">信息编号：</td>
                             <td class="td_wtjj_inner_right">
-                                <input type="text" id="inputXXBH" class="input_content">
+                                <input type="text" id="inputXXBH" class="input_content" placeholder="请输入信息编号">
                                 <span class="span_ckxxbh">如何查看信息编号?</span>
                             </td>
                         </tr>
