--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -4,47 +4,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="@Url.Content("~/Areas/Business/Css/BZZX/BZZX_WZJY.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/BZZX/BZZX_WZJY.css")" rel="stylesheet"/>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_WZJY.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_WZJYZP.js")"></script>
 </head>
 <body>
-    <div class="div_body">
-        <div class="div_wtjj_inner">
-            <table class="table_wtjj">
-                <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">意见内容：</td>
-                    <td class="td_wtjj_inner_right">
-                        <textarea class="textarea_mswt" id="textarea_yjnr" maxlength="1000">意见内容在1000字以内。
-若您的意见被采纳，我们将会通过消息通知您，请关注消息更新记录，请留下您宝贵的意见！
-                        </textarea>
-                        <span class="span_info" id="span_yjnrinfo"></span>
-                    </td>
-                </tr>
-                <tr class="tr_wtjj">
-                    <td class="td_wtjj_inner_left">上传图片：</td>
-                    <td class="td_wtjj_inner_right">
-                        <div id="divFWZPValue" class="div_row_zp" style="display: none;">
-                            <div id="divImgs1" class="div_row_right" style="display: inline-block; width: 670px;">
-                                <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
-                            </div>
+<div class="div_body">
+    <div class="div_wtjj_inner">
+        <table class="table_wtjj">
+            <tr class="tr_wtjj">
+                <td class="td_wtjj_inner_left" style="vertical-align: top; padding-top: 15px;">意见内容：</td>
+                <td class="td_wtjj_inner_right">
+                    <textarea class="textarea_mswt" id="textarea_yjnr" maxlength="1000">意见内容在500字以内。
+若您的意见被采纳，我们将会通过消息通知您，请关注消息更新记录，请留下您宝贵的意见！</textarea>
+                    <span class="span_info" id="span_yjnrinfo"></span>
+                </td>
+            </tr>
+            <tr class="tr_wtjj">
+                <td class="td_wtjj_inner_left">上传图片：</td>
+                <td class="td_wtjj_inner_right">
+                    <div id="divFWZPValue" class="div_row_zp div_row_zp_value" style="display: none;">
+                        <div id="divImgs1" class="div_row_right" style="display: inline-block; width: 670px;">
+                            <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
                         </div>
-                        <div id="div_upload" class="div_upload">
-                            <form action="" enctype="multipart/form-data" id="myform" method="post">
-                                <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
-                            </form>
-                        </div>
-                        <span>已上传图片<span id="span_ysctp">0</span>/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
-                    </td>
-                </tr>
-                <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
-                    <td class="td_wtjj_inner_left"></td>
-                    <td class="td_wtjj_inner_right" style="padding-top:10px;">
-                        <input class="button" id="btnTJJY" type="button" value="提交建议" style="width:153px; height:44px" />
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    </div>
+                    <div id="div_upload" class="div_upload">
+                        <form action="" enctype="multipart/form-data" id="myform" method="post">
+                            <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
+                        </form>
+                    </div>
+                    <span>已上传图片<span id="span_ysctp">0</span>/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
+                </td>
+            </tr>
+            <tr class="tr_wtjj" style="height: 65px; vertical-align: top;">
+                <td class="td_wtjj_inner_left"></td>
+                <td class="td_wtjj_inner_right" style="padding-top: 10px;">
+                    <input class="button" id="btnTJJY" type="button" value="提交建议" style="width: 153px; height: 44px"/>
+                </td>
+            </tr>
+        </table>
     </div>
+</div>
 </body>
 </html>
