--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -33,7 +33,7 @@
                             <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
                         </form>
                     </div>
-                    <span>已上传图片<span id="span_ysctp">0</span>/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
+                    <span>@*已上传图片<span id="span_ysctp">0</span>/5，*@最多可上传4张图片，支持：jpg/gif/png格式 </span>
                 </td>
             </tr>
             <tr class="tr_wtjj" style="height: 65px; vertical-align: top;">
