--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -6,6 +6,7 @@
 <head>
     <link href="@Url.Content("~/Areas/Business/Css/BZZX/BZZX_LXKF.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_LXKF.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_LXKFZP.js")"></script>
 </head>
 <body>
     <div class="div_body">
@@ -81,22 +82,23 @@
                             <td class="td_wtjj_inner_left" style="vertical-align:top;padding-top:15px;">问题描述：</td>
                             <td class="td_wtjj_inner_right">
                                 <textarea class="textarea_mswt" id="textareaWTMS" maxlength="500">请描述您的具体问题，字数在500字以内</textarea>
+                                <span class="span_info" id="span_wtmsinfo"></span>
                             </td>
                         </tr>
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left">上传图片：</td>
                             <td class="td_wtjj_inner_right">
-                                <div id="divFWZPValue" class="div_row_zp" style="display: none;">
-                                    <div id="divImgs1" class="div_row_right" style="display: inline-block; width: 670px;">
-                                        <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
+                                <div class="div_row_zp div_row_zp_value" id="divFWZPValue" style="display: none;">
+                                    <div class="div_row_right" id="divImgs1" style="width: 670px; display: inline-block;">
+                                        <ul class="ulImgs" id="ulImgs1" style="padding-left: 0px;"></ul>
                                     </div>
                                 </div>
-                                <div id="div_upload" class="div_upload">
-                                    <form action="" enctype="multipart/form-data" id="myform" method="post">
-                                        <input id="input_upload" unselectable="on" type="file" multiple="multiple" class="file" />
-                                    </form>
+                                <div class="div_upload" id="div_upload">
+
+                                    <input class="file" id="input_upload" type="file" multiple="multiple" unselectable="on">
+
                                 </div>
-                                <span>已上传图片<span id="span_ysctp">0</span>/5，最多可上传5张图片，支持：jpg/gif/png格式 </span>
+                                <span>最多可上传4张图片，支持：jpg/gif/png格式 </span>
                             </td>
                         </tr>
                         <tr class="tr_wtjj" style="height:65px;vertical-align:top;">
