--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -78,9 +78,9 @@
             <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">银行汇款，为了方便查账，请尽量在汇款后多加几元或几角。</div>
             <div class="div_main_info_body_yhhk div_main_info_body_yhhk_title">第二步</div>
             <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text div_main_info_body_yhhk_text_lxkf">请您在汇款成功后与客服联系：<span class="span_main_info_body_yhhk_text_lxkf">about.infotownlet.com</span></div>
-            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">告知 需要充值的账户类型、汇款的金额、汇款人姓名、汇出银行（需精确到支行）、汇入银行、58用户名等信息。</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">告知 需要充值的账户类型、汇款的金额、汇款人姓名、汇出银行（需精确到支行）、汇入银行、信息小镇用户名等信息。</div>
             <div class="div_main_info_body_yhhk div_main_info_body_yhhk_title">第三步</div>
-            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">58客服人员确认汇款到账，并为您指定的58用户名进行充值。</div>
+            <div class="div_main_info_body_yhhk div_main_info_body_yhhk_text">58客服人员确认汇款到账，并为您指定的信息小镇用户名进行充值。</div>
         </div>
         <div id="div_bottom">
             <div class="div_main_info_body" style="height: 50px;">
