--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/HTGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/HTGL.css
@@ -22,7 +22,7 @@ body{width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;}
 
 .div_content {height: 964px;}
 
-.div_left_menu {height: 100%;float: left;width: 184px;text-align: center;}
+.div_left_menu {height: 100%;float: left;width: 184px;text-align: center;background-color: #ffffff;}
 
 .ul_left_menu {display: block;padding: 20px 0 0 20px;background-color: #ffffff;margin-bottom: 0;}
 
@@ -46,7 +46,7 @@ body{width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;}
 
 .em_left_menu {width: 140px;height: 1px;float: left;background: #cccccc;}
 
-.li_left_menu {width: 140px;text-align: center;}
+.li_left_menu {width: 140px;text-align: center;height: 55px;}
 
 .li_left_menu:hover {color:#bc6ba6;}
 
